# kiro-web-search

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
docs/: unresolved.md
docs/design-docs/features/: claude-code-plugin.md  web-search-mcp.md
docs/requirements/features/: web-search-mcp.md
examples/: request.sh
plugins/kiro-web-search/: .mcp.json
plugins/kiro-web-search/.codex-plugin/: plugin.json
src/kiro_web_search/: __init__.py  __main__.py  server.py
tests/: test_server.py
